# beatingTheWorstC

./: CMakeLists.txt
cli/: CMakeLists.txt  bfs_solver_main.cpp  vc_domination_main.cpp
evaluation/: bfs.csv  bfs_best.csv  eval_bfs.py  eval_vc.py
framework/: CMakeLists.txt
framework/include/framework/: bfs_solver.hpp  vc_domination.hpp
framework/src/: bfs_solver.cpp  vc_domination.cpp
instances/: brunson_south-africa_south-africa
instances/networks/vc_domination_output/: 0.csv  1.csv  10.csv  100.csv  101.csv  102.csv  103.csv  104.csv  105.csv  106.csv  107.csv  108.csv  109.csv  11.csv  110.csv  111.csv  112.csv  113.csv  114.csv  115.csv  116.csv  117.csv  118.csv  119.csv  12.csv  120.csv  121.csv  122.csv  123.csv  124.csv  125.csv  126.csv  127.csv  128.csv  129.csv  13.csv  130.csv  131.csv  132.csv  133.csv  (+761 more)
